fixtures/validation/ui-toolkit-graphics-package/invalid/tilde-in-path/Layout/Main~Menu.uxml
<ui:UXML xmlns:ui="UnityEngine.UIElements">
  <ui:VisualElement name="tilde-path" />
</ui:UXML>
